--- a/myapp/.env.production
+++ b/myapp/.env.production
@@ -1,5 +1,5 @@
 # Production Environment Variables
-REACT_APP_API_BASE_URL=https://your-gym-backend.onrender.com/api
+REACT_APP_API_BASE_URL=https://buildfit.onrender.com/api
 REACT_APP_ENVIRONMENT=production
 
 # Firebase Configuration (if needed)
